--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -1,5 +1,12 @@
 {
   "app": {
     "sekeleton": "رياكت عظم"
+  },
+  "form": {
+    "name": "الاسم",
+    "email": "البريد الالكتروني",
+    "phone": "رقم الهاتف",
+    "password": "كلمة السر",
+    "signup": "تسجيل"
   }
 }
