feat: add signup flow (#5)
* feat: add signup flow

* feat: add arabic language for form

* refactor: use mui instead of css

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -2,8 +2,11 @@
   "app": {
     "sekeleton": "رياكت عظم"
   },
-  "table":{
-    "datepicker": "إختر تاريخ"
+  "form": {
+    "name": "الاسم",
+    "email": "البريد الالكتروني",
+    "phone": "رقم الهاتف",
+    "password": "كلمة السر",
+    "signup": "تسجيل"
   }
-
 }
