Fixing rtl theme, and reverting table

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -8,5 +8,8 @@
     "phone": "رقم الهاتف",
     "password": "كلمة السر",
     "signup": "تسجيل"
+  }, 
+  "table": {
+    "datepicker" : "إختر تاريخ"
   }
 }
