login feature done

--- a/packages/client/public/assets/locales/en/translation.json
+++ b/packages/client/public/assets/locales/en/translation.json
@@ -7,6 +7,7 @@
     "email": " Email",
     "phone": " Phone",
     "password": "Password ",
-    "signup": "SignUp"
+    "signup": "SignUp",
+    "login": "Login"
   }
 }
