--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -7,6 +7,7 @@
     "email": "البريد الالكتروني",
     "phone": "رقم الهاتف",
     "password": "كلمة السر",
-    "signup": "تسجيل"
+    "signup": "تسجيل",
+    "login": "دخول"
   }
 }
