feat: add react routes

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -8,8 +8,13 @@
     "phone": "رقم الهاتف",
     "password": "كلمة السر",
     "signup": "تسجيل"
-  }, 
+  },
   "table": {
-    "datepicker" : "إختر تاريخ"
+    "datepicker": "إختر تاريخ"
+  },
+  "nav": {
+    "map": "الخريطة",
+    "driver": "السائق",
+    "location": "الموقع"
   }
 }
