--- a/packages/client/public/assets/locales/en/translation.json
+++ b/packages/client/public/assets/locales/en/translation.json
@@ -1,15 +1,20 @@
 {
-	"app": {
-		"sekeleton": "REACT SKELETON"
-	},
-	"form": {
-		"name": "Name",
-		"email": " Email",
-		"phone": " Phone",
-		"password": "Password ",
-		"signup": "SignUp"
-	},
-	"table": {
-		"datepicker": "Pick a date"
-	}
+  "app": {
+    "sekeleton": "REACT SKELETON"
+  },
+  "form": {
+    "name": "Name",
+    "email": " Email",
+    "phone": " Phone",
+    "password": "Password ",
+    "signup": "SignUp"
+  },
+  "table": {
+    "datepicker": "Pick a date"
+  },
+  "nav": {
+    "map": "Map",
+    "driver": "Driver",
+    "location": "Location"
+  }
 }
