--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -1,15 +1,22 @@
 {
-  "app": {
-    "sekeleton": "رياكت عظم"
-  },
-  "form": {
-    "name": "الاسم",
-    "email": "البريد الالكتروني",
-    "phone": "رقم الهاتف",
-    "password": "كلمة السر",
-    "signup": "تسجيل"
-  }, 
-  "table": {
-    "datepicker" : "إختر تاريخ"
-  }
+	"app": {
+		"sekeleton": "رياكت عظم"
+	},
+	"form": {
+		"name": "الاسم",
+		"email": "البريد الالكتروني",
+		"phone": "رقم الهاتف",
+		"password": "كلمة السر",
+		"signup": "تسجيل"
+	},
+	"table": {
+		"datepicker": "إختر تاريخ"
+	},
+	"modal": {
+		"favorites": {
+			"message": "هل ترغب في إضافة مواقع مفضلة؟",
+			"accept": "نعم",
+			"decline": "إلغاء"
+		}
+	}
 }
