--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -7,7 +7,8 @@
     "email": "البريد الالكتروني",
     "phone": "رقم الهاتف",
     "password": "كلمة السر",
-    "signup": "تسجيل"
+    "signup": "تسجيل",
+    "login": "دخول"
   },
   "table": {
     "datepicker": "إختر تاريخ"
@@ -15,7 +16,6 @@
   "nav": {
     "map": "الخريطة",
     "driver": "السائق",
-    "location": "الموقع",
-    "login": "دخول"
+    "location": "الموقع"
   }
 }
