feat: add react routes (#10)
* feat: add react routes

* refactor: fix conflicts & code enhancement

--- a/packages/client/public/assets/locales/en/translation.json
+++ b/packages/client/public/assets/locales/en/translation.json
@@ -1,23 +1,28 @@
 {
-	"app": {
-		"sekeleton": "REACT SKELETON"
-	},
-	"form": {
-		"name": "Name",
-		"email": " Email",
-		"phone": " Phone",
-		"password": "Password ",
-		"signup": "SignUp",   
-		"login": "Login"
-	},
-	"table": {
-		"datepicker": "Pick a date"
-	},
-	"modal": {
-		"favorites": {
-			"message": "Would you like to set-up favorite locations?",
-			"accept": "Yes",
-			"decline": "Cancel"
-		}
-	}
+  "app": {
+    "sekeleton": "REACT SKELETON"
+  },
+  "form": {
+    "name": "Name",
+    "email": " Email",
+    "phone": " Phone",
+    "password": "Password ",
+    "signup": "SignUp",
+    "login": "Login"
+  },
+  "table": {
+    "datepicker": "Pick a date"
+  },
+  "nav": {
+    "map": "Map",
+    "driver": "Driver",
+    "location": "Location"
+  },
+  "modal": {
+    "favorites": {
+      "message": "Would you like to set-up favorite locations?",
+      "accept": "Yes",
+      "decline": "Cancel"
+    }
+  }
 }
