--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -1,23 +1,28 @@
 {
-	"app": {
-		"sekeleton": "رياكت عظم"
-	},
-	"form": {
-		"name": "الاسم",
-		"email": "البريد الالكتروني",
-		"phone": "رقم الهاتف",
-		"password": "كلمة السر",
-		"signup": "تسجيل",
-		"login": "دخول"
-	},
-	"table": {
-		"datepicker": "إختر تاريخ"
-	},
-	"modal": {
-		"favorites": {
-			"message": "هل ترغب في إضافة مواقع مفضلة؟",
-			"accept": "نعم",
-			"decline": "إلغاء"
-		}
-	}
+  "app": {
+    "sekeleton": "رياكت عظم"
+  },
+  "form": {
+    "name": "الاسم",
+    "email": "البريد الالكتروني",
+    "phone": "رقم الهاتف",
+    "password": "كلمة السر",
+    "signup": "تسجيل",
+    "login": "دخول"
+  },
+  "table": {
+    "datepicker": "إختر تاريخ"
+  },
+  "nav": {
+    "map": "الخريطة",
+    "driver": "السائق",
+    "location": "الموقع"
+  },
+  "modal": {
+    "favorites": {
+      "message": "هل ترغب في إضافة مواقع مفضلة؟",
+      "accept": "نعم",
+      "decline": "إلغاء"
+    }
+  }
 }
