--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -1,28 +1,54 @@
 {
-  "app": {
-    "sekeleton": "رياكت عظم"
-  },
-  "form": {
-    "name": "الاسم",
-    "email": "البريد الالكتروني",
-    "phone": "رقم الهاتف",
-    "password": "كلمة السر",
-    "signup": "تسجيل",
-    "login": "دخول"
-  },
-  "table": {
-    "datepicker": "إختر تاريخ"
-  },
-  "nav": {
-    "map": "الخريطة",
-    "driver": "السائق",
-    "location": "الموقع"
-  },
-  "modal": {
-    "favorites": {
-      "message": "هل ترغب في إضافة مواقع مفضلة؟",
-      "accept": "نعم",
-      "decline": "إلغاء"
-    }
-  }
+	"app": {
+		"sekeleton": "رياكت عظم"
+	},
+	"form": {
+		"name": "الاسم",
+		"email": "البريد الالكتروني",
+		"phone": "رقم الهاتف",
+		"password": "كلمة السر",
+		"signup": "تسجيل",
+		"login": "دخول",
+		"registration": {
+			"text": "لست عضوا؟",
+			"link": "إنضم لنا"
+		},
+		"loginAlerts": {
+			"email": "الرجاء إدخال البريد الإلكتروني بشكل صحيح",
+			"password": {
+				"required": "كلمة السر مطلوبة",
+				"min": "كلمة السر قصير - الحد الأدنى 8 أحرف"
+			},
+			"signupAlerts": {
+				"name": "الإسم مطلوب",
+				"phone": {
+					"required": "رقم الهاتف مطلوب",
+					"min": "رقم الهاتف غير صالح"
+				},
+				"email": {
+					"required": "البريد الإلكتروني مطلوب",
+					"invalid": "عنوان البريد الإلكتروني غير صالح"
+				},
+				"password": {
+					"required": "كلمة السر مطلوبة",
+					"min": "يجب أن يكون عدد الأحرف 8 أحرف أو أكثر"
+				}
+			}
+		}
+	},
+	"table": {
+		"datepicker": "إختر تاريخ"
+	},
+	"nav": {
+		"map": "الخريطة",
+		"driver": "السائق",
+		"location": "الموقع"
+	},
+	"modal": {
+		"favorites": {
+			"message": "هل ترغب في إضافة مواقع مفضلة؟",
+			"accept": "نعم",
+			"decline": "إلغاء"
+		}
+	}
 }
