refactor: add signin button in the signup form

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -13,6 +13,10 @@
 			"text": "لست عضوا؟",
 			"link": "إنضم لنا"
 		},
+		"signin":{
+			"text":"لديك حساب؟",
+			"link":"تسجيل الدخول"
+		},
 		"loginAlerts": {
 			"email": "الرجاء إدخال البريد الإلكتروني بشكل صحيح",
 			"password": {
