--- a/packages/client/public/assets/locales/en/translation.json
+++ b/packages/client/public/assets/locales/en/translation.json
@@ -13,6 +13,10 @@
 			"text": "Not a member?",
 			"link": "Join us"
 		},
+		"signin":{
+			"text":"Already have account ?",
+			"link":" SignIn"
+		},
 		"loginAlerts": {
 			"email": "Please enter a valid email",
 			"password": {
