Fixed Textfield error messages localization

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -14,25 +14,28 @@
 			"link": "إنضم لنا"
 		},
 		"loginAlerts": {
-			"email": "الرجاء إدخال البريد الإلكتروني بشكل صحيح",
+			"email": {
+				"invalid": "الرجاء إدخال البريد الإلكتروني بشكل صحيح",
+				"required": "البريد الإلكتروني مطلوب"
+			},
 			"password": {
 				"required": "كلمة السر مطلوبة",
 				"min": "كلمة السر قصير - الحد الأدنى 8 أحرف"
+			}
+		},
+		"signupAlerts": {
+			"name": "الإسم مطلوب",
+			"phone": {
+				"required": "رقم الهاتف مطلوب",
+				"min": "رقم الهاتف غير صالح"
 			},
-			"signupAlerts": {
-				"name": "الإسم مطلوب",
-				"phone": {
-					"required": "رقم الهاتف مطلوب",
-					"min": "رقم الهاتف غير صالح"
-				},
-				"email": {
-					"required": "البريد الإلكتروني مطلوب",
-					"invalid": "عنوان البريد الإلكتروني غير صالح"
-				},
-				"password": {
-					"required": "كلمة السر مطلوبة",
-					"min": "يجب أن يكون عدد الأحرف 8 أحرف أو أكثر"
-				}
+			"email": {
+				"required": "البريد الإلكتروني مطلوب",
+				"invalid": "عنوان البريد الإلكتروني غير صالح"
+			},
+			"password": {
+				"required": "كلمة السر مطلوبة",
+				"min": "يجب أن يكون عدد الأحرف 8 أحرف أو أكثر"
 			}
 		}
 	},
