added sign out button

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -42,7 +42,8 @@
 	"nav": {
 		"map": "الخريطة",
 		"driver": "السائق",
-		"location": "الموقع"
+		"location": "الموقع",
+		"signout": "الخروج"
 	},
 	"modal": {
 		"favorites": {
