--- a/packages/client/public/assets/locales/en/translation.json
+++ b/packages/client/public/assets/locales/en/translation.json
@@ -42,7 +42,8 @@
 	"nav": {
 		"map": "Map",
 		"driver": "Driver",
-		"location": "Location"
+		"location": "Location",
+		"signout": "Sign Out"
 	},
 	"modal": {
 		"favorites": {
