feat: add edit/delete features

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -56,6 +56,11 @@
 			"message": "هل ترغب في إضافة مواقع مفضلة؟",
 			"accept": "نعم",
 			"decline": "إلغاء"
+		},
+		"location": {
+			"message": "الرجاء تحديد الموقع الجديد من خلال الضغط على الخريطة",
+			"accept": "حفظ",
+			"decline": "إلغاء"
 		}
 	},
 	"server": {
