Add driver modal

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -13,9 +13,9 @@
 			"text": "لست عضوا؟",
 			"link": "إنضم لنا"
 		},
-		"signin":{
-			"text":"لديك حساب؟",
-			"link":"تسجيل الدخول"
+		"signin": {
+			"text": "لديك حساب؟",
+			"link": "تسجيل الدخول"
 		},
 		"loginAlerts": {
 			"email": {
@@ -70,5 +70,31 @@
 			"phone": "الهاتف مسجل"
 		},
 		"login": "البريد الإلكتروني أو كلمة السر خطأ"
+	},
+	"drivers": {
+		"modal": {
+			"title": "أضف سائق جديد",
+			"form": {
+				"name": "الأسم",
+				"phone": "رقم الهاتف",
+				"car_model": "موديل السيارة",
+				"license_plate": "رقم السيارة",
+				"location": "الموقع"
+			},
+			"errors": {
+				"name": "الأسم مطلوب",
+				"phone": {
+					"required": "رقم الهاتف مطلوب",
+					"min": "رقم الهاتف غير صالح"
+				},
+				"car_model": "موديل السيارة مطلوب",
+				"license_plate": "رقم السيارة مطلوب",
+				"location": "الموقع مطلوب"
+			},
+			"actions": {
+				"submit": "إرسال",
+				"cancel": "إلغاء"
+			}
+		}
 	}
 }
