Finalized drivers tab

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -60,7 +60,7 @@
 		},
 		"location": {
 			"addMessage": "الرجاء اضافة الموقع الجديد من خلال الضغط على الخريطة",
-			"updateMessage": "الرجاء تحديد الموقع الجديد من خلال الضغط على الخريطة",
+			"editMessage": "الرجاء تحديد الموقع الجديد من خلال الضغط على الخريطة",
 			"accept": "حفظ",
 			"decline": "إلغاء"
 		}
@@ -74,7 +74,9 @@
 	},
 	"drivers": {
 		"modal": {
-			"title": "أضف سائق جديد",
+			"addDriverButton": "اضافة سائق",
+			"addTitle": "أضف سائق جديد",
+			"editTitle": "تعديل معلومات السائق",
 			"form": {
 				"name": "الأسم",
 				"phone": "رقم الهاتف",
