created access to user location

--- a/packages/client/public/assets/locales/ar/translation.json
+++ b/packages/client/public/assets/locales/ar/translation.json
@@ -63,6 +63,11 @@
 			"editMessage": "الرجاء تحديد الموقع الجديد من خلال الضغط على الخريطة",
 			"accept": "حفظ",
 			"decline": "إلغاء"
+		},
+		"liveMap": {
+			"message": "السماح بالوصول إلى الموقع الحالي",
+			"accept": "نعم",
+			"decline": "إلغاء"
 		}
 	},
 	"server": {
